# Emuze

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
libs/nativefiledialog/: CMakeLists.txt  nativefiledialog.cbp
src/: emuze.cpp  emuze.h  main.cpp  menu.cpp  menu.h
src/components/: DisassemblyView.h  EmulatorView.h  LogView.h  RegistersView.h
src/emulators/chip8/: Chip8.cpp  Chip8.h  Disasm.cpp  Disasm.h  VM.h
